--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,11 @@
-RewriteEngine on
+# Ativa o mod_rewrite
+RewriteEngine On
+
+# Remove a extensão .html
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^(.*)$ $1.html
+RewriteRule ^(.*)$ $1.html [L]
+
+# Opção adicional: Redireciona URLs antigas com .html para URLs sem .html
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
+RewriteRule ^ %1 [R=301,L]
