--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "regions": ["gru1"],
-  "functions": {
-    "app/page.tsx": {
-      "maxDuration": 30
-    }
-  }
+  "buildCommand": "pnpm build",
+  "installCommand": "pnpm install",
+  "regions": ["gru1"]
 } 
